--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,16 @@ a:hover {
 }
 
 /** **/
+
+.gist {
+  width: 500px !important;
+}
+.gist-file
+.gist-data {
+  max-height: 500px;
+  max-width: 500px;
+}
+
 /** Footer list formatting *******************************/
 
 a.undecorated, a.undecorated:link, a.undecorated:visited, a.undecorated:hover {
