--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,4 +2,11 @@
   <a href="http://faylixe.github.io/{{ site.baseurl }}">
       <img class="img-responsive" style="max-width: 150px;" src="/images/avatar.png" />
   </a>
+  <ul class="undecorated">
+    <li><a target="_blank" href="/download/documents/resume.pdf"><img src="/images/social/cv.png" alt="Resume"/></a></li>
+    <li><a target="_blank" href="https://twitter.com/Faylixe"><img src="/images/social/Twitter.png" alt="Twitter"/></a></li>
+    <li><a target="_blank" href="https://fr.linkedin.com/in/felixvoituret"><img src="/images/social/LinkedIn.png" alt="LinkedIn profile"/></a></li>
+    <li><a target="_blank" href="https://github.com/Faylixe"><img src="/images/social/Github.png" alt="GitHub"/></a></li>
+    <li><a target="_blank" href=""><img src="/images/social/Email.png" alt="E-mail"/></a></li>
+  </ul>
 </div>
