--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row text-center">
   <ul class="undecorated">
     <li><a target="_blank" href="/download/documents/resume.pdf"><img src="/images/social/cv.png" alt="Resume"/></a></li>
     <li><a target="_blank" href="https://twitter.com/Faylixe"><img src="/images/social/Twitter.png" alt="Twitter"/></a></li>
