--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="row text-center">
   <a href="http://faylixe.github.io/{{ site.baseurl }}">
-      <img class="img-responsive" style="max-width: 150px;" src="/images/avatar.png" />
+      <img class="img-responsive centered" style="max-width: 150px;" src="/images/avatar.png" />
   </a>
 </div>
