Updates social integration

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: default
 
 <hr></hr>
 
-<ul class="social">
+<ul class="social unpadded">
   <li><div class="fb-share-button" data-href="http://faylixe.github.io{{ page.url | prepend: site.baseurl }}" data-layout="button_count"></div></li>
   <li><a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=%23article+%23Java+%23MATSim+">Tweet</a></li>
   <li>
