--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="row text-center">
-  <ul class="undecorated">
+  <ul class="undecorated unpadded">
     <li><a target="_blank" href="/download/documents/resume.pdf"><img src="/images/social/cv.png" alt="Resume"/></a></li>
     <li><a target="_blank" href="https://twitter.com/Faylixe"><img src="/images/social/Twitter.png" alt="Twitter"/></a></li>
     <li><a target="_blank" href="https://fr.linkedin.com/in/felixvoituret"><img src="/images/social/LinkedIn.png" alt="LinkedIn profile"/></a></li>
