--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,15 +29,15 @@ layout: default
 <hr></hr>
 
 <ul class="social unpadded">
-  <li><div class="fb-share-button" data-href="http://faylixe.github.io{{ page.url | prepend: site.baseurl }}" data-layout="button_count"></div></li>
-  <li><a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=%23article+%23Java+%23MATSim+">Tweet</a></li>
+  <li><div class="fb-share-button" data-href="http://faylixe.fr{{page.url}}" data-layout="button_count"></div></li>
+  <li><a class="twitter-share-button" href="https://twitter.com/intent/tweet?text={{ page.tweet }}">Tweet</a></li>
   <li>
     <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
-    <script type="IN/Share" data-url="http://faylixe.github.io{{ page.url | prepend: site.baseurl }}" data-counter="right"></script>
+    <script type="IN/Share" data-url="http://faylixe.fr{{page.url}}" data-counter="right"></script>
   </li>
 </ul>
 
-<div class="fb-comments" data-href="http://faylixe.github.io{{ page.url | prepend: site.baseurl }}" data-numposts="5" data-width="100%"></div>
+<div class="fb-comments" data-href="http://faylixe.fr{{page.url}}" data-numposts="5" data-width="100%"></div>
 
 <div class="row">
   <div class="post_entry">
