Update image style and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="row text-center">
   <ul class="undecorated unpadded">
     <li><a target="_blank" href="https://twitter.com/Faylixe"><img src="/images/social/Twitter.png" alt="Twitter"/></a></li>
-    <li><a target="_blank" href="https://fr.linkedin.com/in/felixvoituret"><img src="/images/social/LinkedI.png" alt="LinkedIn profile"/></a></li>
+    <li><a target="_blank" href="https://fr.linkedin.com/in/felixvoituret"><img src="/images/social/LinkedIn.png" alt="LinkedIn profile"/></a></li>
     <li><a target="_blank" href="https://github.com/Faylixe"><img src="/images/social/Github.png" alt="GitHub"/></a></li>
   </ul>
 </div>
